# cosmwasm-blockchain-smart-contract-example

./: .gitignore  Cargo.toml  README.md
.cargo/: config
.github/workflows/: rust.yml
schema/: chapter_10.json
src/: contract.rs  lib.rs  msg.rs  multitest.rs  state.rs
src/multitest/: tests.rs
