[package]
name = "academy-31-10-22"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.1.5"
serde = "1.0.147"

[dev-dependencies]
cw-multi-test = "0.16.0"
