[package]
name = "chapter_10"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = "1.1.5"
cosmwasm-std = "1.1.5"
cw-storage-plus = "0.16.0"
schemars = "0.8.11"
serde = "1.0.147"
thiserror = "1.0.37"
cw-multi-test = { version = "0.16.0", optional = true }

[dev-dependencies]
cw-multi-test = "0.16.0"
counting-contract-0_1 = { path = "../cosmwasm-blockchain-smart-contract-example", package = "chapter_10", features = ["tests"] }
